--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 .App {
   text-align: center;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: right;
+  /* align-items: center; */
+  height: 100vh;
+  /* width: 100vw; */
+  background-color: aquamarine;
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+}
+
+.audio-controls-container {
+  position: fixed;
+  left: 0;
+  top: 10%;
+  z-index: 1;
+
+}
+.playing {
+  background-color: #00ff02; /* Change this to the color you want */
+}
+
+.Document div .react-pdf__Page {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .App-logo {
@@ -20,8 +47,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  color: bisque;
 }
 
 .App-link {
