--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
+/* .App.header{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+
+} */
+
 .App {
   text-align: center;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: right;
-  /* align-items: center; */
+  align-items: right;
   height: 100vh;
   /* width: 100vw; */
   background-color: aquamarine;
@@ -14,9 +21,12 @@
 
 .audio-controls-container {
   position: fixed;
-  left: 0;
+  right: 0;
   top: 10%;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 
 }
 .playing {
